# aoc-2025-claude

./: .gitignore  Cargo.toml  Justfile  README.md
.claude/: context.md  settings.local.json
.claude/commands/: solve.md
.claude/templates/: day_readme.md
.github/workflows/: rust.yml
benches/: day_benches.rs
scripts/: new_day.sh
src/: lib.rs  main.rs  runner.rs  table.rs
src/common/: mod.rs
src/days/: mod.rs
src/days/day01/: README.md  mod.rs  solution.rs
src/days/day01/input/: puzzle.txt
src/days/day02/: README.md  mod.rs  solution.rs
src/days/day02/input/: puzzle.txt
src/days/day03/: README.md  mod.rs  solution.rs
src/days/day03/input/: puzzle.txt
src/days/day04/: README.md  mod.rs  solution.rs
src/days/day05/: README.md  mod.rs  solution.rs
src/days/day06/: README.md  mod.rs  solution.rs
src/days/day06/input/: puzzle.txt
src/days/day07/: README.md  mod.rs  solution.rs
src/days/day08/: README.md  mod.rs  solution.rs
src/days/day08/input/: puzzle.txt
src/days/day09/: README.md  mod.rs  solution.rs
src/days/day09/input/: puzzle.txt
src/days/day10/: README.md  mod.rs  solution.rs
src/days/day10/input/: puzzle.txt
src/days/day11/: README.md  mod.rs  solution.rs
src/days/day11/input/: puzzle.txt
src/days/day12/: README.md  mod.rs  solution.rs
tests/: integration_tests.rs
