[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aoc2025"
path = "src/main.rs"

[lib]
name = "aoc2025"
path = "src/lib.rs"

[dependencies]
# Keeping dependencies minimal - evaluate utility vs size for each addition
good_lp = { version = "1.7", features = ["microlp"], default-features = false }  # Integer Linear Programming solver for Day 10 Part 2

[dev-dependencies]
# Test dependencies only

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
